@@ -42,6 +42,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
     testLogging {
         showStandardStreams = true
     }
